MODIFIED z-index of Rickshaw timeline to prevent element from becoming covered by other elements

--- a/web-app/css/rickshaw/rickshaw_custom.css
+++ b/web-app/css/rickshaw/rickshaw_custom.css
@@ -55,6 +55,7 @@
   padding-bottom: 10px;
   margin-left: 60px;
   width: 1104px;
+  z-index: 1976;
 }
 #rickshaw_addons {
   margin-top: 10px;
